# pingora-waf

./: CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  grafana-dashboard.json  prometheus-alerts.yml
config/: server.yaml  waf_rules.yaml  waf_rules_benchmark.yaml  waf_rules_testing.yaml
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  examples.md  faq.md  getting-started.md  monitoring.md  performance.md  security-rules.md  troubleshooting.md
examples/: basic_usage.rs  command_injection_test.rs  comprehensive_security_test.rs  custom_rules.rs  hot_reload_demo.rs  load_test.rs  mock_backend.rs  mock_backend_tokio.rs  path_traversal_test.rs  security_test.rs
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  watcher.rs
src/metrics/: collector.rs
src/proxy/: context.rs  mod.rs
src/waf/: body_inspector.rs  bot_detector.rs  command_injection.rs  ip_filter.rs  mod.rs  path_traversal.rs  rate_limiter.rs  rules.rs  sql_injection.rs  xss_detector.rs
