[package]
name = "pingora-waf"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = "0.6.0"
pingora-core = "0.6.0"
pingora-proxy = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-limits = "0.6.0"
pingora-timeout = "0.6.0"

tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.11"
once_cell = "1.20"
log = "0.4"
env_logger = "0.11"
prometheus = "0.13"
bytes = "1.9"
http = "1.1"
chrono = "0.4"
dashmap = "6.1"
parking_lot = "0.12"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
ipnetwork = "0.20"
notify = "6.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
